# LRS-FEI

./: .gitattributes  README.md  gazebo_setup.bash  mission_1_all.csv  mission_2_simple.csv  mission_3_all  parse_pgm.py  simple automatic mission.md
2nd_project/: Improved_1st_project.md  improved_1st_project.md  obstacle_avoidance.md  swarm_control.md
maps/: fei_lrs_gazebo.world
maps/FEI_LRS_2D/: map_025.pgm  map_075.pgm  map_100.pgm  map_125.pgm  map_150.pgm  map_175.pgm  map_200.pgm  map_225.pgm
models/drone1/: model.config
models/drone2/: model.config  model.sdf
models/drone3/: model.config  model.sdf
models/fei_lrs_drone/: drone.dae  drone_lowres.dae  drone_with_jetson.dae  model.config  model.sdf  propeller.dae
models/fei_lrs_drone_hi_res/: model.sdf
models/hangar/: biela.dae  bokdvere.dae  bokstrecha.dae  budkaoknadvere.dae  budkaoknadverebiela.dae  klucka.dae  model.config  model.sdf  oknobok.dae  plechbok.dae  regal.dae  sklo.dae  strecha.dae  tienidlanaokno.dae  zarubna.dae
models/hangar/materials/scripts/: brick.material  brick90.material  concrete.material  steel.material
models/iris_with_ardupilot/: model.sdf
resources/: points_example.csv
template_drone_control/: CMakeLists.txt  package.xml
template_drone_control/src/: template_drone_control_node.cpp
tutorial/: bfs_ff.md  ros2_cheatsheet.md
tutorial/bfs_ff/: bfs.py  map.pgm  path_output.pgm
worlds/: fei_lrs_gazebo.world  fei_lrs_gazebo_depth.world  fei_lrs_gazebo_hi_res.world  iris_arducopter_runway.world  mav1.parm  mav2.parm  mav3.parm
