<?xml version="1.0"?>
<package format="3">
  <name>template_drone_control</name>
  <version>0.0.1</version>
  <description>Offboard control node package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
